@@ -15,19 +15,12 @@
 
 (import "lib/conn")
 
-(define (eko-session port)
-  (show "EKO: HELO")
-  (newline)
-  (until (closed? port)
-    (define data (read port))
-    (show "EKO: ")
-    (show data)
-    (newline)
+(define (eko-session)
+  (until (closed?)
+    (define data (read))
     (if (eof-object? data)
-      (close port)
-      (write data port)))
-  (show "EKO: BYE")
-  (newline))
+      (close)
+      (write data))))
 
 (define (eko portno)
   (spawn-tcp-server portno eko-session))
